# deepagent-model-document

./: .env.example  .gitignore  AGENTS.md  README.md  additional-context.md  mrm_agent.yaml  pyproject.toml
contexts/: fictitious-governance-template-additional-context.md  fictitious-mrm-template-additional-context.md
examples/: build_fictitious_mrm_template.py  fictitious_governance_template.md  fictitious_mrm_template.docx  simple_agent_template.md
examples/regression_model/: README.md  assumptions.md  config.yaml  data.csv  evaluate.py  generate_data.py  train.py
examples/regression_model/governance_outputs/: fictitious_governance_filled.md  fictitious_mrm_filled.docx
src/mrm_deepagent/: __init__.py  agent_runtime.py  auth.py  cli.py  config.py  context_manager.py  docx_applier.py  docx_utils.py  draft_generator.py  draft_parser.py  exceptions.py  markdown_applier.py  marker_utils.py  models.py  prompts.py  repo_indexer.py  simple.py  template_applier.py  template_parser.py  template_parser_docx.py  template_parser_markdown.py  tracing.py
tests/: conftest.py  test_agent_runtime.py  test_auth.py  test_cli.py  test_config.py  test_context_manager.py  test_context_path_resolution.py  test_docx_applier.py  test_draft_generator.py  test_draft_parser.py  test_h2m_gateway_smoke.py  test_integration.py  test_integration_markdown.py  test_live_smoke.py  test_markdown_applier.py  test_models.py  test_prompts.py  test_repo_indexer.py  test_simple.py  test_template_dispatch.py  test_template_parser.py  test_template_parser_markdown.py  test_tracing.py
(+2 files in other folders)
